src/objects/ADvendio__PublisherPayoutInvoiceItemAssignment__c.object
<CustomObject>
    <description>Junctions Object to link Invoice Items, Campaign Items, and Publisher Payout Conditions.</description>
    <fields>
        <fullName>ADvendio__Amount__c</fullName>
        <description>Shows the Amount counted for this Campaign/Invoice Item. This value is calculated automatically based upon the Delivered quantities applicable for the Condition and the Invoiced Amount.</description>
        <inlineHelpText>Shows the Amount counted for this Campaign/Invoice Item. This value is calculated automatically based upon the Delivered quantities applicable for the Condition and the Invoiced Amount.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__CampaignItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Campaign Item which belongs to the linked publisher payout condition.</description>
        <inlineHelpText>Reference to the Campaign Item which belongs to the linked publisher payout condition.</inlineHelpText>
        <label>Campaign Item</label>
        <referenceTo>ADvendio__Campaign_Item__c</referenceTo>
        <relationshipLabel>Publisher Payout InvoiceItem Assignments</relationshipLabel>
        <relationshipName>PublisherPayoutInvoiceItemAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceItem__c</fullName>
        <description>Relation to the Invoice Item which belongs to the linked publisher payout condition.</description>
        <inlineHelpText>Relation to the Invoice Item which belongs to the linked publisher payout condition. Only Invoice Items which are completely within the time frame of the Publisher Payout contract are connected.</inlineHelpText>
        <label>Invoice Item</label>
        <referenceTo>ADvendio__InvoiceItem__c</referenceTo>
        <relationshipLabel>Publisher Payout InvoiceItem Assignments</relationshipLabel>
        <relationshipName>PublisherPayoutInvoiceItemAssignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__PublisherPayoutCondition__c</fullName>
        <description>Links the Publisher Payout Condition with Invoice and Campaign Item.</description>
        <inlineHelpText>Please select the appropriate Publisher Payout Condition.</inlineHelpText>
        <label>Publisher Payout Condition</label>
        <referenceTo>ADvendio__PublisherPayoutCondition__c</referenceTo>
        <relationshipLabel>Publisher Payout InvoiceItem Assignments</relationshipLabel>
        <relationshipName>PublisherPayoutInvoiceItemAssignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__Quantity__c</fullName>
        <description>This field shows the quantity counted for the matching Campaign/Invoice Item. For Items with delivery data only data from the AdServer Ids configured in the Condition are taken into account. This Field is automatically filled by ADvendio.</description>
        <inlineHelpText>This field shows the quantity counted for the matching Campaign/Invoice Item. For Items with delivery data only data from the AdServer Ids configured in the Condition are taken into account. This Field is automatically filled by ADvendio.</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Publisher Payout InvoiceItem Assignment</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__PublisherPayoutCondition__c</columns>
        <columns>ADvendio__CampaignItem__c</columns>
        <columns>ADvendio__InvoiceItem__c</columns>
        <columns>ADvendio__Quantity__c</columns>
        <columns>ADvendio__Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PPI-{0000}</displayFormat>
        <label>Publisher Payout InvoiceItem No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Publisher Payout InvoiceItem Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>